--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 16:40:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 29 2022 16:50:43 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae">
 <head>
   <meta charset="utf-8">
-  <title>Eleven &amp; Law - Sports Consultancy</title>
-  <meta content="We are a Belgium based firm specialized in law &amp; sports." name="description">
-  <meta content="Eleven &amp; Law - Sports Consultancy" property="og:title">
-  <meta content="We are a Belgium based firm specialized in law &amp; sports." property="og:description">
-  <meta content="http://elevenandlaw.com/elevenopengraph.jpg" property="og:image">
-  <meta content="Eleven &amp; Law - Sports Consultancy" property="twitter:title">
-  <meta content="We are a Belgium based firm specialized in law &amp; sports." property="twitter:description">
-  <meta content="http://elevenandlaw.com/elevenopengraph.jpg" property="twitter:image">
+  <title>DAROC - Your growth is our main goal.</title>
+  <meta content="We are only accepting 10 clients on our ELITE plan starting on July 1st, 2022, to December 31st, 2022." name="description">
+  <meta content="DAROC - Your growth is our main goal." property="og:title">
+  <meta content="We are only accepting 10 clients on our ELITE plan starting on July 1st, 2022, to December 31st, 2022." property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/6255994dc6031b58ba0771ae/6261f7b857096dad266fedc0_Group%2086.svg" property="og:image">
+  <meta content="DAROC - Your growth is our main goal." property="twitter:title">
+  <meta content="We are only accepting 10 clients on our ELITE plan starting on July 1st, 2022, to December 31st, 2022." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/6255994dc6031b58ba0771ae/6261f7b857096dad266fedc0_Group%2086.svg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -20,8 +20,8 @@
   <link href="css/daroc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.jpg" rel="apple-touch-icon">
   <style>
 ::selection {
   background: #283a4b;
