--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 16:50:43 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 29 2022 16:54:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae">
 <head>
   <meta charset="utf-8">
@@ -186,7 +186,7 @@ window.cookieconsent.initialise({
     <div class="container-3 w-container">
       <div class="div-block-6">
         <div data-ix="hoverfield" class="shortbio infook">Whilst we are based in Mexico, we work with clients both in Mexico and the US. </div>
-        <a href="#" class="button-2 w-button">I&#x27;m an agent</a>
+        <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 w-button">I&#x27;m an agent</a>
         <div class="openinghours">
           <a id="w-node-_2b19c358-bf6d-f82a-286f-3383dcbf6722-380771bb" href="https://www.instagram.com/daroc_agency/" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Instagram</div>
