--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 16:54:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 29 2022 17:05:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <link href="css/daroc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
   <style>
 ::selection {
@@ -57,12 +57,13 @@ window.cookieconsent.initialise({
 </head>
 <body data-ix="loadopactiy" class="body">
   <div data-ix="load" class="loadbg"><img src="images/logoeleven.svg" width="200" alt="" class="logoload"></div>
-  <div data-animation="default" class="navbar transparence w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-ix="navappear" data-w-id="a71b7dfe-1ea4-5604-f758-e1aa71ea6985" role="banner" data-duration="400">
+  <div data-animation="over-right" class="navbar transparence w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-ix="navappear" data-w-id="a71b7dfe-1ea4-5604-f758-e1aa71ea6985" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
     <div class="menubutton w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
-    <a href="#" class="brand w-nav-brand"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image"></a>
+    <a href="#hero" class="link-block-2 w-inline-block"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image"></a>
     <nav role="navigation" class="navmenu w-nav-menu">
+      <div class="div-block-7"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image-4"></div>
       <a href="#story" class="navlink white w-nav-link">Our mission</a>
       <a href="#expertise" class="navlink white w-nav-link">Expertise</a>
       <a href="#offer" class="navlink white w-nav-link">Offer</a>
@@ -74,7 +75,7 @@ window.cookieconsent.initialise({
       <a href="https://airtable.com/shrgOavkpyoup48Xd" target="_blank" class="button-2 mar_left w-button">I&#x27;m a coach</a>
     </div>
   </div>
-  <div class="hero-section wf-section">
+  <div id="hero" class="hero-section wf-section">
     <div class="div-block-3">
       <div data-ix="appearlate" class="introtxt">Your growth is our main goal.</div>
       <div class="contentxt"><strong class="bold-text">We are only accepting 10 clients on our ELITE plan starting on July 1st, 2022, to December 31st, 2022. </strong></div>
