--- a/old-home.html
+++ b/old-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 16:54:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 29 2022 17:05:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031bb7450771be" data-wf-site="6255994dc6031b58ba0771ae">
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <link href="css/daroc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
   <style>
 ::selection {
