--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 17:05:04 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae">
+<!--  Last Published: Fri Apr 29 2022 17:15:40 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
   <title>DAROC - Your growth is our main goal.</title>
@@ -30,6 +30,14 @@
 .shortbio.infook{
     -webkit-font-smoothing:antialiased;}  
 </style>
+  <link rel="alternate" hreflang="en" href="https://daroc.agency">
+  <link rel="alternate" hreflang="es" href="https://es.daroc.agency">
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_e360849d658700150fd6d96557466fad8'
+    });
+</script>
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
   <script>
