--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 17:15:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 29 2022 19:48:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -86,11 +86,8 @@ window.cookieconsent.initialise({
   <div id="hero" class="hero-section wf-section">
     <div class="div-block-3">
       <div data-ix="appearlate" class="introtxt">Your growth is our main goal.</div>
-      <div class="contentxt"><strong class="bold-text">We are only accepting 10 clients on our ELITE plan starting on July 1st, 2022, to December 31st, 2022. </strong></div>
-      <div class="div-block">
-        <a id="w-node-ad859468-aa8a-7132-0837-e120baf5e9bc-380771bb" href="https://airtable.com/shroBxsabRNDPipKb" target="_blank" class="button-2 w-button">I&#x27;m a player</a>
-        <a id="w-node-b4f54594-706f-db60-a783-54612970d6e8-380771bb" href="https://airtable.com/shrgOavkpyoup48Xd" target="_blank" class="button-2 w-button">I&#x27;m a coach</a>
-      </div>
+      <div class="contentxt"><strong class="bold-text">We are only accepting 10 clients on our GRAND OPENING offer. From July 1st, 2022, to December 31st, 2022. <br>Don’t miss the chance of this life changing opportunity, fill the initial questionnaire.</strong></div>
+      <a id="w-node-ad859468-aa8a-7132-0837-e120baf5e9bc-380771bb" href="https://airtable.com/shroBxsabRNDPipKb" target="_blank" class="button-2 w-button">I&#x27;m a player</a>
     </div>
   </div>
   <div id="story" class="_01 page2 wf-section">
@@ -130,19 +127,10 @@ window.cookieconsent.initialise({
       <div class="_50px"></div>
     </div>
     <div class="content w-container">
-      <div class="headcontent">Live the American college experience in steroids, live it as a student-athlete. Play D1 college soccer at what is considered the best semi-professional soccer league in the world, while getting a great education.</div>
-      <ul role="list" class="list">
-        <li>Initial questioner so I can understand your goals and needs.</li>
-        <li>Guide you through the communication you will have with college soccer coaches.</li>
-        <li>We will put you in contact with schools that are in your preferred location and any other specification you have.</li>
-        <li>Give you a step-by-step check list of the things you must do to get accepted at any college and get offered an athletic scholarship. </li>
-        <li>Give you a checklist with the things you must do to get your student visa.</li>
-        <li>Attractive and eye-catching profile that coaches won’t be able to miss. </li>
-        <li>Head start against any other soccer player in the world that want to play college soccer because of Dan Rosenfeld reputation in the college soccer world. </li>
-        <li>Precise checklist on the steps you must take to get recruited and be eligible to play college soccer.</li>
-        <li>Guaranteed official offer from a college soccer team in the United States that fits all your needs and specifications.</li>
-      </ul>
-      <div class="headcontent">If you do everything we ask you to do, complete the tasks we give you in a timely matter, and every time respond back to us in twenty-four hours, we will not charge you anything until you get your first official offer from a college that fits all your specifications. ONLY when you receive your first official offer from a college that fits all your specifications, only then you will pay us.</div>
+      <div class="headcontent">Young talented Mexican soccer players - Receive an athletic scholarship in less than three months . . . The American Dream Gameplan.</div>
+      <div class="headcontent">Live the American college experience on steroids, live it as a <strong>student-athlete</strong>. Play D1 college soccer at what is considered the best semi-professional soccer league in the world, while getting a great education. </div>
+      <div class="headcontent"><strong>If you do everything we ask you to do, complete the tasks we give you in a timely manner, and every time respond back to us in twenty-four hours, we will not charge you anything until you get your first official offer from a college that fits with all your specifications. </strong></div>
+      <div class="headcontent"><strong class="bold-text-2">Plus a LIFE-CHANGING Bonus that is part of our Grand Opening offer!</strong></div>
     </div>
   </div>
   <div id="team" class="_02 wf-section">
@@ -153,8 +141,8 @@ window.cookieconsent.initialise({
     <div class="container w-container">
       <div class="headcontent">Our team is led by :</div>
       <div class="roqteam w-row">
-        <div class="w-col w-col-4"><img src="images/WhatsApp-Image-2022-04-19-at-12_30_26-PM-1.jpeg" width="260" alt="" class="image-2"></div>
-        <div class="w-col w-col-8">
+        <div class="column-2 w-col w-col-4"><img src="images/WhatsApp-Image-2022-04-19-at-12_30_26-PM-1.jpeg" width="260" alt="" class="image-2"><img src="images/Group-88.png" loading="lazy" alt="" class="image-5"></div>
+        <div class="w-clearfix w-col w-col-8">
           <div class="titlename"><strong>Dan Rosenfeld</strong></div>
           <ul role="list" class="list-2">
             <li>4 years as an NCAA Division 1 college soccer player for Valparaiso University. </li>
@@ -165,25 +153,27 @@ window.cookieconsent.initialise({
             <li>Worked with legendary sports psychologist Dr. Dano Freigang.</li>
             <li>Languages: Spanish and English.</li>
           </ul>
-          <a href="#" class="linkprofile">Contact</a>
-          <a href="https://be.linkedin.com/in/thomas-spee-17883384" target="_blank" class="linkprofile">LinkedIn</a>
+          <a href="#" class="linkprofile hidden">Contact</a>
+          <a href="https://www.linkedin.com/in/dan-rosenfeld-kolangui-256381197/" target="_blank" class="linkprofile">LinkedIn</a>
         </div>
       </div>
       <div class="roqteam w-row">
-        <div class="w-col w-col-4"><img src="images/IMG_4673-1.JPG" width="260" alt="" class="image-2"></div>
-        <div class="w-col w-col-8">
+        <div class="column-2 w-col w-col-4"><img src="images/Screen-Shot-2022-04-29-at-14.11.56.jpg" width="260" alt="" class="image-2"></div>
+        <div class="w-clearfix w-col w-col-8">
           <div class="titlename"><strong>Javi Lorent</strong></div>
           <ul role="list" class="list-2">
-            <li>Español de Jerez de la frontera, graduado en Ciencias de la Actividad Física y el Deporte en la Universidad Politécnica de Madrid.</li>
-            <li>Complementé mis estudios con la formación en entrenamiento de fuerza y rehabilitación oficial del FC Barcelona y también me convertí parte de la prestigiosa familia de EXOS mediante el certificado SPORTS PERFORMANCE SPECIALIST.</li>
-            <li>Languages: Spanish and English.</li>
+            <li>Graduated in Sports Science. Universidad Politécnica Madrid (Spain).</li>
+            <li>Certificate in Strength and Rehabilitation training by FC Barcelona innovation hub.</li>
+            <li>EXOS Sport Performance Specialist.</li>
+            <li>Soccer Coach</li>
+            <li>Biomechanics and Human Movement trainer.</li>
           </ul>
-          <a href="#" class="linkprofile">Contact</a>
-          <a href="https://be.linkedin.com/in/thomas-spee-17883384" target="_blank" class="linkprofile">LinkedIn</a>
+          <a href="#" class="linkprofile hidden">Contact</a>
+          <a href="https://be.linkedin.com/in/thomas-spee-17883384" target="_blank" class="linkprofile hidden">LinkedIn</a>
         </div>
       </div>
       <div class="div-block-4">
-        <a href="https://airtable.com/shrgOavkpyoup48Xd" target="_blank" class="button-2 black w-button">Be part of the team</a>
+        <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 black w-button">Be part of the team</a>
       </div>
     </div>
   </div>
@@ -194,7 +184,7 @@ window.cookieconsent.initialise({
     </div>
     <div class="container-3 w-container">
       <div class="div-block-6">
-        <div data-ix="hoverfield" class="shortbio infook">Whilst we are based in Mexico, we work with clients both in Mexico and the US. </div>
+        <div data-ix="hoverfield" class="shortbio infook">Your growth is our main goal.</div>
         <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 w-button">I&#x27;m an agent</a>
         <div class="openinghours">
           <a id="w-node-_2b19c358-bf6d-f82a-286f-3383dcbf6722-380771bb" href="https://www.instagram.com/daroc_agency/" target="_blank" class="link-block w-inline-block">
@@ -209,7 +199,7 @@ window.cookieconsent.initialise({
             <div data-ix="hoverfield" class="shortbio contactz2">LinkedIn</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
           </a>
-          <a id="w-node-_5bf54da8-3227-18e8-4629-b1cee9c84d09-380771bb" href="#" class="link-block w-inline-block">
+          <a id="w-node-_5bf54da8-3227-18e8-4629-b1cee9c84d09-380771bb" href="https://www.youtube.com/channel/UCBXbi1pfXt1iouYBVG8ogOg" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Youtube</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
           </a>
@@ -219,10 +209,10 @@ window.cookieconsent.initialise({
         <div class="div1contact">
           <div>
             <div data-ix="hoverfield" class="shortbio contactz2">Email</div>
-            <div data-ix="hoverfield" class="shortbio infook">AROC_Agency</div>
+            <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
           </div>
           <div data-ix="hoverfield" class="shortbio contactz2">Location</div>
-          <div data-ix="hoverfield" class="shortbio infook">We work with clients both in Mexico and the US.</div>
+          <div data-ix="hoverfield" class="shortbio infook">Mexico</div>
           <div>
             <div data-ix="hoverfield" class="shortbio contactz2">Phone</div>
             <div data-ix="hoverfield" class="shortbio infook">+52 5526722334</div>
