Change mail and header size

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 29 2022 19:54:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon May 02 2022 16:19:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -128,7 +128,7 @@ window.cookieconsent.initialise({
     </div>
     <div class="content w-container">
       <div class="headcontent">Young talented Mexican soccer players - Receive an athletic scholarship in less than three months . . . The American Dream Gameplan.</div>
-      <div class="headcontent">Live the American college experience on steroids, live it as a <strong>student-athlete</strong>. Play D1 college soccer at what is considered the best semi-professional soccer league in the world, while getting a great education. </div>
+      <div class="headcontent">Live the American college experience amplified, live it as a <strong>student-athlete</strong>. Play D1 college soccer at what is considered the best semi-professional soccer league in the world, while getting a great education. </div>
       <div class="headcontent"><strong>If you do everything we ask you to do, complete the tasks we give you in a timely manner, and every time respond back to us in twenty-four hours, we will not charge you anything until you get your first official offer from a college that fits with all your specifications. </strong></div>
       <div class="headcontent"><strong class="bold-text-2">Plus a LIFE-CHANGING Bonus that is part of our Grand Opening offer!</strong></div>
     </div>
@@ -207,10 +207,10 @@ window.cookieconsent.initialise({
       </div>
       <div>
         <div class="div1contact">
-          <div>
+          <a href="mailto:daroc.agency@gmail.com" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Email</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
-          </div>
+          </a>
           <div data-ix="hoverfield" class="shortbio contactz2">Location</div>
           <div data-ix="hoverfield" class="shortbio infook">Mexico</div>
           <div>
