--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon May 02 2022 16:19:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 05 2022 17:07:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b01380771bb" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -65,7 +65,7 @@ window.cookieconsent.initialise({
 </head>
 <body data-ix="loadopactiy" class="body">
   <div data-ix="load" class="loadbg"><img src="images/logoeleven.svg" width="200" alt="" class="logoload"></div>
-  <div data-animation="over-right" class="navbar transparence w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-ix="navappear" data-w-id="a71b7dfe-1ea4-5604-f758-e1aa71ea6985" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
+  <div data-animation="over-right" class="navbar transparence w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-ix="navappear" data-w-id="315c1067-4981-6039-81d8-8f59268cedbc" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
     <div class="menubutton w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
@@ -187,25 +187,25 @@ window.cookieconsent.initialise({
         <div data-ix="hoverfield" class="shortbio infook">Your growth is our main goal.</div>
         <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 w-button">I&#x27;m an agent</a>
         <div class="openinghours">
-          <a id="w-node-_2b19c358-bf6d-f82a-286f-3383dcbf6722-380771bb" href="https://www.instagram.com/daroc_agency/" target="_blank" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1f6-4887e1ea" href="https://www.instagram.com/daroc_agency/" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Instagram</div>
             <div data-ix="hoverfield" class="shortbio infook">daroc_agency</div>
           </a>
-          <a id="w-node-d496f29d-0c23-5698-6828-68ae764ebdb4-380771bb" href="https://twitter.com/DAROK_Agency" target="_blank" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1fb-4887e1ea" href="https://twitter.com/DAROK_Agency" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Twitter</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_agency</div>
           </a>
-          <a id="w-node-_36618ce4-0d42-fb6e-b7cf-c1113161befc-380771bb" href="#" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e200-4887e1ea" href="#" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">LinkedIn</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
           </a>
-          <a id="w-node-_5bf54da8-3227-18e8-4629-b1cee9c84d09-380771bb" href="https://www.youtube.com/channel/UCBXbi1pfXt1iouYBVG8ogOg" target="_blank" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e205-4887e1ea" href="https://www.youtube.com/channel/UCBXbi1pfXt1iouYBVG8ogOg" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Youtube</div>
             <div data-ix="hoverfield" class="shortbio infook">DAROC_Agency</div>
           </a>
         </div>
       </div>
-      <div>
+      <div class="div-block-8">
         <div class="div1contact">
           <a href="mailto:daroc.agency@gmail.com" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Email</div>
@@ -218,6 +218,9 @@ window.cookieconsent.initialise({
             <div data-ix="hoverfield" class="shortbio infook">+52 5526722334</div>
           </div>
         </div>
+        <a href="privacy-notice.html" class="link-block-3 w-inline-block">
+          <div class="text-block-2">Privacy notice</div>
+        </a>
       </div>
     </div>
     <a href="#" class="symboltop w-inline-block"><img src="images/Capa-1.svg" width="34" alt="" class="image-3"></a>
