--- a/old-home.html
+++ b/old-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon May 02 2022 16:19:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 05 2022 17:07:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031bb7450771be" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
 </head>
 <body class="body">
   <div class="hero wf-section"><img src="images/el_symbol_envoi.svg" width="30" alt="" class="symbol">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="a71b7dfe-1ea4-5604-f758-e1aa71ea6985" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
       <div class="w-container">
         <a href="#" class="brand w-nav-brand"><img src="images/logoeleven.svg" width="198" alt=""></a>
         <nav role="navigation" class="navmenu w-nav-menu">
