--- a/gdpr.html
+++ b/gdpr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon May 02 2022 16:19:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 05 2022 17:07:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6255994dc6031b73f30771bd" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
 </head>
 <body data-ix="loadopactiy" class="body">
   <div class="loadbg"><img src="images/logoeleven.svg" width="200" alt="" class="logoload"></div>
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="a71b7dfe-1ea4-5604-f758-e1aa71ea6985" data-easing="ease" data-easing2="ease" role="banner" class="navbar black w-nav">
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar black w-nav">
     <div class="menubutton w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
