--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 05 2022 17:07:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 05 2022 17:26:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6274042763f0bd330c2fd335" data-wf-site="6255994dc6031b58ba0771ae" lang="en">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@ window.cookieconsent.initialise({
     <div class="menubutton w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
-    <a href="#" class="link-block-2 w-inline-block"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image"></a>
+    <a href="index.html" class="link-block-2 w-inline-block"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image"></a>
     <nav role="navigation" class="navmenu w-nav-menu">
       <div class="div-block-7"><img src="images/Capa-1.svg" loading="lazy" alt="" class="image-4"></div>
       <a href="#story" class="navlink white w-nav-link">Our mission</a>
@@ -138,9 +138,14 @@ window.cookieconsent.initialise({
             <div data-ix="hoverfield" class="shortbio infook">+52 5526722334</div>
           </div>
         </div>
-        <a href="privacy-notice.html" class="link-block-3 w-inline-block">
-          <div class="text-block-2">Privacy notice</div>
-        </a>
+        <div class="div-block-9">
+          <a href="privacy-notice.html" class="link-block-3 w-inline-block">
+            <div class="text-block-2">Privacy notice</div>
+          </a>
+          <a href="terms-conditions.html" aria-current="page" class="link-block-3 w-inline-block w--current">
+            <div class="text-block-2">Terms &amp; Conditions</div>
+          </a>
+        </div>
       </div>
     </div>
     <a href="#" class="symboltop w-inline-block"><img src="images/Capa-1.svg" width="34" alt="" class="image-3"></a>
