--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@ window.cookieconsent.initialise({
         <div data-ix="hoverfield" class="shortbio infook">Your growth is our main goal.</div>
         <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 w-button">I&#x27;m an agent</a>
         <div class="openinghours">
-          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1f6-4887e1ea" href="https://www.instagram.com/daroc_agency/" target="_blank" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1f6-4887e1ea" href="https://www.instagram.com/daroc.agency/" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Instagram</div>
-            <div data-ix="hoverfield" class="shortbio infook">daroc_agency</div>
+            <div data-ix="hoverfield" class="shortbio infook">daroc.agency</div>
           </a>
           <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1fb-4887e1ea" href="https://twitter.com/DAROK_Agency" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Twitter</div>
