Change instagram and javi name

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ window.cookieconsent.initialise({
       <div class="roqteam w-row">
         <div class="column-2 w-col w-col-4"><img src="images/Screen-Shot-2022-04-29-at-14.11.56.jpg" width="260" alt="" class="image-2"></div>
         <div class="w-clearfix w-col w-col-8">
-          <div class="titlename"><strong>Javi Lorent</strong></div>
+          <div class="titlename"><strong>Javi Lorenete</strong></div>
           <ul role="list" class="list-2">
             <li>Graduated in Sports Science. Universidad Politécnica Madrid (Spain).</li>
             <li>Certificate in Strength and Rehabilitation training by FC Barcelona innovation hub.</li>
@@ -187,7 +187,7 @@ window.cookieconsent.initialise({
         <div data-ix="hoverfield" class="shortbio infook">Your growth is our main goal.</div>
         <a href="https://airtable.com/shrB3zUMXBuhPMeuA" target="_blank" class="button-2 w-button">I&#x27;m an agent</a>
         <div class="openinghours">
-          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1f6-4887e1ea" href="https://www.instagram.com/daroc.agency/" target="_blank" class="link-block w-inline-block">
+          <a id="w-node-e42788ab-8ecc-b4ad-5cad-0f244887e1f6-4887e1ea" href="https://www.instagram.com/DAROC_Mex/" target="_blank" class="link-block w-inline-block">
             <div data-ix="hoverfield" class="shortbio contactz2">Instagram</div>
             <div data-ix="hoverfield" class="shortbio infook">daroc.agency</div>
           </a>
