--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ window.cookieconsent.initialise({
       <div class="roqteam w-row">
         <div class="column-2 w-col w-col-4"><img src="images/Screen-Shot-2022-04-29-at-14.11.56.jpg" width="260" alt="" class="image-2"></div>
         <div class="w-clearfix w-col w-col-8">
-          <div class="titlename"><strong>Javi Lorenete</strong></div>
+          <div class="titlename"><strong>Lorente</strong></div>
           <ul role="list" class="list-2">
             <li>Graduated in Sports Science. Universidad Politécnica Madrid (Spain).</li>
             <li>Certificate in Strength and Rehabilitation training by FC Barcelona innovation hub.</li>
